# DiaPredictML

./: README.md  main.py  pyproject.toml  requirements.txt
notebooks/: eda.ipynb
results/: ann_metrics.txt  baselines_metrics.txt  best_ann_model.keras  ml_models_metrics.txt
src/eda/: explore.py
src/models/: adv_models.py  ann.py  baseline.py
src/tuning/: __init__.py  optuna_tune.py
src/utils/: helpers.py
